--- a/.github/workflows/markscribe.yml
+++ b/.github/workflows/markscribe.yml
@@ -12,7 +12,7 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Generate README
         uses: muesli/readme-scribe@master
@@ -22,13 +22,7 @@ jobs:
           template: 'README.gtpl'
           writeTo: 'README.md'
 
-      - name: Check if README.md has changed
-        id: check_diff
-        run: |
-          git diff --exit-code README.md || echo "README.md has changes"
-
-      - name: Commit and push README if changed
-        if: steps.check_diff.outputs.diff == 'true'
+      - name: Commit README
         uses: stefanzweifel/git-auto-commit-action@v4
         env:
           GITHUB_TOKEN: ${{ github.token }}
