--- a/.github/workflows/update-README.yml
+++ b/.github/workflows/update-README.yml
@@ -22,7 +22,7 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add README.md
-          git commit -m "Update README.md from README.gtpl"
+          git commit -m "Update"
           git push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
