--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,8 +1,8 @@
 # Visit https://github.com/lowlighter/metrics#-documentation for full reference
-name: Update README
+name: Metrics
 on:
   # Schedule updates (every 3 hours)
-  schedule: [{cron: "0 */2 * * *"}]
+  schedule: [{cron: "0 */1 * * *"}]
   # Lines below let you run workflow manually and on each commit
   workflow_dispatch:
   push: {branches: ["master", "main"]}
@@ -39,7 +39,7 @@ jobs:
           user: ChrisTitusTech
           template: classic
           base: header, activity, community, repositories, metadata
-          config_timezone: Sweden/stockholm
+          config_timezone: Sweden/stock
           plugin_gists: yes
           plugin_habits: yes
           plugin_habits_charts_type: classic
