--- a/.github/workflows/markscribe.yml
+++ b/.github/workflows/markscribe.yml
@@ -4,7 +4,7 @@ on:
   push:
   workflow_dispatch:
   schedule:
-    - cron: '0 0 * * *'
+    - cron: '2 * * * *'
 
 jobs:
   markscribe:
@@ -12,7 +12,7 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4.2.2
+        uses: actions/checkout@v1
 
       - name: Generate README
         uses: muesli/readme-scribe@master
