--- a/.github/workflows/update-README.yml
+++ b/.github/workflows/update-README.yml
@@ -14,14 +14,14 @@ jobs:
       - name: Check out the repository
         uses: actions/checkout@v3
         
-      - name: Copy README.gtpl to README.md
-        run: cp README.gtpl README.md
+      - name: Copy README.gtpl to README.html
+        run: cp README.gtpl README.html
         
       - name: Commit changes
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add README.md
+          git add README.html
           git commit -m "Update"
           git push
         env:
