--- a/markscribe.yml
+++ b/markscribe.yml
@@ -1,7 +1,7 @@
 # markscribe.yml
 
 github:
-  username: gurraoptimus
+  username: gurraoptimus  # Replace with your GitHub username
 
 template:
   sections:
@@ -12,3 +12,8 @@ template:
     - source: github.stats
       options:
         username: gurraoptimus
+    - source: github.repositories
+      options:
+        username: gurraoptimus
+        limit: 10       # Adjust the number of repositories to list
+        order: updated  # Options include 'updated', 'pushed', 'created', 'full_name'
