--- a/.github/workflows/update-README.yml
+++ b/.github/workflows/update-README.yml
@@ -1,60 +1,30 @@
-# Visit https://github.com/lowlighter/metrics#-documentation for full reference
-name: Metrics
+name: Update README
+
 on:
   # Schedule updates (every 3 hours)
-  schedule: [{cron: "0 */3 * * *"}]
-  # Lines below let you run workflow manually and on each commit
+  # schedule: [{cron: "0 /3 * * *"}]
+  push:
+    paths:
+      - README.gtpl
   workflow_dispatch:
-  push: {branches: ["master", "main"]}
-jobs:
-  github-metrics:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-    concurrency:
-      group: metrics-update
-      cancel-in-progress: true
-    steps:
-      - name: Cache dependencies
-        uses: actions/cache@v2
-        with:
-          path: ~/.cache
-          key: ${{ runner.os }}-cache-${{ hashFiles('**/lockfiles') }}
-      - uses: lowlighter/metrics@latest
-        with:
-          # Your GitHub token
-          # The following scopes are required:
-          #  - public_access (default scope)
-          #  - read:user
-          #  - read:org
-          #  - repo
-          # The following additional scopes may be required:
-          #  - read:org      (for organization related metrics)
-          #  - read:user     (for user related data)
-          #  - read:packages (for some packages related data)
-          #  - repo          (optional, if you want to include private repositories)
-          token: ${{ secrets.GH_PAT }}
 
-          # Options
-          user: ChrisTitusTech
-          template: classic
-          base: header, activity, community, repositories, metadata
-          config_timezone: America/Chicago
-          plugin_gists: yes
-          plugin_habits: yes
-          plugin_habits_charts_type: classic
-          plugin_habits_days: 14
-          plugin_habits_facts: yes
-          plugin_habits_from: 200
-          plugin_isocalendar: yes
-          plugin_isocalendar_duration: full-year
-          plugin_lines: yes
-          plugin_lines_history_limit: 1
-          plugin_lines_repositories_limit: 4
-          plugin_lines_sections: base
-          plugin_traffic: yes
-          plugin_wakatime: yes
-          plugin_wakatime_sections: time, projects, projects-graphs, languages, languages-graphs, editors-graphs, os-graphs
-          plugin_wakatime_languages_ignored: markdown, plaintext, text, xml, yaml, JSON
-          plugin_wakatime_days: 365
-          plugin_wakatime_token: ${{ secrets.WAKATIME_TOKEN }}
+jobs:
+  update-readme:
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Check out the repository
+        uses: actions/checkout@v3
+        
+      - name: Copy README.gtpl to README.md
+        run: cp README.gtpl README.md
+        
+      - name: Commit changes
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add README.md
+          git commit -m "Update"
+          git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
